feat(sidebar): sidebar appears on scroll up

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -150,6 +150,11 @@ h1 {
     padding: 0;
 }
 
+.navigation-fixed {
+    position: fixed;
+    width: 131px;
+}
+
 .navigation .link {
     display: block;
     padding: 3px 3px 3px 6px;
