fix(css): use more actual styles
:tf:

--- a/Web/static/css/main.css
+++ b/Web/static/css/main.css
@@ -1,3 +1,85 @@
+/*
+Всё не то, всё не так:
+Ты мой друг — я твой враг.
+Как же так всё у нас с тобою?
+Был апрель, и в любви
+Мы клялись, но, увы,
+Пролетел жёлтый лист
+По бульварам Москвы.
+*/
+
+/*
+Третье сентября — день прощанья,
+День, когда горят костры рябин.
+Как костры, горят обещанья
+В день, когда я совсем один.
+*/
+
+/*
+Я календарь переверну —
+И снова третье сентября.
+На фото я твоё взгляну —
+И снова третье сентября.
+Но почему, но почему
+Расстаться всё же нам пришлось,
+Ведь, было всё у нас всерьёз
+Второго сентября?!
+Но почему, но почему
+Расстаться всё же нам пришлось,
+Ведь, было всё у нас всерьёз
+Второго сентября?!
+*/
+
+/*
+Журавлей белый клин,
+Твоя дочь и мой сын —
+Все хотят теплоты и ласки.
+Мы в любовь, как в игру,
+На холодном ветру
+Поиграли с тобой,
+Но пришёл сам собой
+*/
+
+/*
+Третье сентября — день прощанья,
+День, когда горят костры рябин.
+Как костры, горят обещанья
+В день, когда я совсем один.
+*/
+
+/*
+Я календарь переверну —
+И снова третье сентября.
+На фото я твоё взгляну —
+И снова третье сентября.
+Но почему, но почему
+Расстаться всё же нам пришлось,
+Ведь, было всё у нас всерьёз
+Второго сентября?!
+Но почему, но почему
+Расстаться всё же нам пришлось,
+Ведь, было всё у нас всерьёз
+Второго сентября?!
+*/
+
+/*
+Я календарь переверну —
+И снова третье сентября.
+На фото я твоё взгляну —
+И снова третье сентября.
+Но почему, но почему
+Расстаться всё же нам пришлось,
+Ведь, было всё у нас всерьёз
+Второго сентября?!
+Но почему, но почему
+Расстаться всё же нам пришлось,
+Ведь, было всё у нас всерьёз
+Второго сентября?!
+*/
+html {
+	transform: translate(180deg);
+}
+
 html {
     overflow-y: scroll;
 }
