fix(components): prefix defined constants with backslashes

--- a/Web/Presenters/templates/Gifts/Pick.latte
+++ b/Web/Presenters/templates/Gifts/Pick.latte
@@ -72,7 +72,7 @@
                 "page"    => $page,
                 "count"   => $count,
                 "amount"  => sizeof($gifts),
-                "perPage" => OPENVK_DEFAULT_PER_PAGE,
+                "perPage" => \OPENVK_DEFAULT_PER_PAGE,
             ]}
         </div>
     </div>
