fix(components): additional fixes

--- a/Web/Presenters/templates/Gifts/Confirm.latte
+++ b/Web/Presenters/templates/Gifts/Confirm.latte
@@ -50,5 +50,5 @@
                 <input type="checkbox" name="anonymous"> {_as_anonymous}
             </label>
         </form>
-    </center>
+    </div>
 {/block}
