--- a/Web/Presenters/templates/Gifts/UserGifts.latte
+++ b/Web/Presenters/templates/Gifts/UserGifts.latte
@@ -85,7 +85,7 @@
             "page"     => $page,
             "count"    => $count,
             "amount"   => sizeof($data),
-            "perPage"  => $perPage ?? OPENVK_DEFAULT_PER_PAGE,
+            "perPage"  => $perPage ?? \OPENVK_DEFAULT_PER_PAGE,
             "atBottom" => true,
             ]}
         </div>
