--- a/Web/Presenters/templates/Audio/bigplayer.latte
+++ b/Web/Presenters/templates/Audio/bigplayer.latte
@@ -1,3 +1,4 @@
+{var $tidy = $tidy ?? false}
 <div n:class="bigPlayer, ctx_place, $tidy ? tidy">
     <div class="bigPlayerWrapper">
         <div class="playButtons">
