--- a/Web/Presenters/templates/components/post/oldpost.latte
+++ b/Web/Presenters/templates/components/post/oldpost.latte
@@ -12,6 +12,7 @@
 {else}
     {var $deac = "post_deact_silent"}
 {/if}
+{var $compact = isset($compact) ? true : false}
 
 
 
@@ -98,7 +99,7 @@
                             <a>{$post->getGeo()->name ?? tr("admin_open")}</a>
                         </div>
                     </div>
-                    <div n:if="$suggestion && $canBePinned" class="suggestionControls" style="margin-bottom: 7px;">
+                    <div n:if="$suggestion ?? false && $canBePinned" class="suggestionControls" style="margin-bottom: 7px;">
                         <input type="button" class="button" id="publish_post" data-id="{$post->getId()}" value="{_publish_suggested}">
                         <input type="button" class="button" id="decline_post" data-id="{$post->getId()}" value="{_decline_suggested}">
                     </div>
@@ -135,7 +136,7 @@
                         <a href="/wall{$post->getPrettyId()}/delete">{_delete}</a> &nbsp;|&nbsp;
                     {/if} 
 
-                    {if $feedIgnoreButton && !$canBeDeleted}
+                    {if $feedIgnoreButton ?? false && !$canBeDeleted}
                     <a id="__ignoreSomeoneFeed" data-val='1' data-id="{$wallOwner->getRealId()}">{_feed_ignore}</a> &nbsp;|&nbsp;
                     {/if}
 
